# hexapod_stairclimb

al5b_ws/devel/: .catkin  .rosinstall  setup.sh
al5b_ws/devel/lib/: libchomp_planner_plugin.so.0.9.17  libmoveit_background_processing.so.0.9.17  libmoveit_cached_ik_kinematics_base.so.0.9.17  libmoveit_cached_ik_kinematics_plugin.so.0.9.17  libmoveit_chomp_optimizer_adapter.so.0.9.17  libmoveit_collision_detection.so.0.9.17  libmoveit_collision_detection_fcl.so.0.9.17  libmoveit_collision_distance_field.so.0.9.17  libmoveit_collision_plugin_loader.so.0.9.17  libmoveit_common_planning_interface_objects.so.0.9.17  libmoveit_constraint_sampler_manager_loader.so.0.9.17  libmoveit_constraint_samplers.so.0.9.17  libmoveit_controller_manager_example.so.0.9.17  libmoveit_default_planning_request_adapter_plugins.so.0.9.17  libmoveit_depth_image_octomap_updater.so.0.9.17  libmoveit_depth_image_octomap_updater_core.so.0.9.17  libmoveit_distance_field.so.0.9.17  (+60 more)
hexapod_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
test_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
test_ws/src/hexapod_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
test_ws/src/hexapod_moveit_config/config/: fake_controllers.yaml  hexapodV2.srdf  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
test_ws/src/hexapod_moveit_config/launch/: demo.launch  demo_gazebo.launch  move_group.launch  moveit_rviz.launch  please_move.launch  trajectory_execution.launch.xml
test_ws/src/hexapod_moveit_config/src/: hexapod_movement.cpp
(+348 files in other folders)
